# dataset-db

./: .env.example  .gitignore  AGENTS.md  E2E_TESTING.md  IMPLEMENTATION.md  QUICKSTART.md  README.md  STRUCTURE.md  datasets.txt  hello.py  ingest.md  ingest_and_index_from_list.py  pyproject.toml  slurm_ingest_index.sh  spec.md
examples/: api_server.py  basic_ingestion.py  e2e_test.py  incremental_updates.py  index_building.py  inspect_data.py  parquet_ingestion.py  resume_ingestion.py
src/dataset_db/: __init__.py  config.py
src/dataset_db/api/: __init__.py  loader.py  models.py  query.py  server.py
src/dataset_db/index/: __init__.py  builder.py  domain_dict.py  file_registry.py  manifest.py  membership.py  mphf.py  postings.py
src/dataset_db/ingestion/: __init__.py  dataset_registry.py  duplicate_tracker.py  hf_loader.py  processor.py
src/dataset_db/normalization/: __init__.py  ids.py  url_normalizer.py
src/dataset_db/storage/: __init__.py  layout.py  parquet_writer.py
tests/: __init__.py
tests/unit/: test_api.py  test_dataset_registry.py  test_domain_dict.py  test_file_registry.py  test_ids.py  test_incremental.py  test_mphf.py  test_parquet_writer.py  test_processor.py  test_storage_layout.py  test_url_normalizer.py
