[project]
name = "dataset-db"
version = "0.1.0"
description = "Domain → Datasets → URLs database at extreme scale"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ruff>=0.14.1",
    # Data processing
    "polars>=1.0.0",
    "pyarrow>=18.0.0",
    # HuggingFace datasets
    "datasets>=3.0.0",
    # URL parsing and normalization
    "publicsuffixlist>=1.0.0",
    # Hashing
    "xxhash>=3.0.0",
    # Compression
    "zstandard>=0.23.0",
    # Configuration
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dataset_db"]
